--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,4 @@
 sonar.projectKey=saadalsayed_Maven-jenkins-app_AYkmFeuqrdsVyKIfIFD6
+sonar.login=squ_6648bed3b63eab80ef6e453f8d79c17e9edd4a0b
+
+# Project key will also be used for binary file
